tests/chapter_16/invalid_types/nested_static_init_too_long.c
// initialize "bcde" is too long to initialize
// nested array of type char[3]
char array[3][3] = {"a", "bcde"};

int main(void)
{

    return 0;
}